# ecommerce

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
data/Criteo_Conversion_Search/: temp
data/standardized/df_source.parquet/partner_id=E68029E9BCE099A60571AF757CBB6A08/: c37d0bbbb77542509bfdd675e7e4b69e-0.parquet
docs/: contribution-guide.md  gen_pages.py  index.md  user-guide.md
ecommerce/configs/: columns.py
ecommerce/notebooks/: manual_features_extraction.py  pipeline.ipynb  pipeline.py  process_data.ipynb  test.ipynb  total_sales_predictor.py
ecommerce/operations/: common.py  read.py
ecommerce/operations/base/: write.py
ecommerce/operations/custom/: data_splitter.py  feature_extractor.py  feature_synthesis.py  read_criteo_seach_data.py
